--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 aiogram
 SQLAlchemy
-sqlite3 # built-in with Python, no need to install
+# sqlite3  built-in with Python, no need to install
 python-dotenv
